#268 - Document Path starting with "." creates folder with "." name